parte02/03-route-github-event-listener.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: github-event-listener
spec:
  host: github-event-listener-<namespace>.apps.cluster-mvf62.mvf62.sandbox2472.opentlc.com #Reemplazar
  to:
    kind: Service
    name: el-github-event-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
